namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: todolist
  labels:
    app: todolist
---
