services.yml
apiVersion: v1
kind: Service
metadata:
  namespace: todolist
  name: db
spec:
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: todolist
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: todolist
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 80
  type: ClusterIP
---
