ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
#   namespace: todolist
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: eni.curieux.org
#     http:
#       paths:
#       - backend:
#           service:
#             name: frontend
#             port:
#               number: 8080
#         path: /
#         pathType: Prefix
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: todolist
    namespace: todolist
  spec:
    ingressClassName: nginx
    rules:
      - host: eni.curieux.org
        http:
          paths:
            - pathType: ImplementationSpecific
              backend:
                service:
                  name: frontend
                  port:
                    number: 8080
              path: /
            - pathType: Prefix
              backend:
                service:
                  name:  backend
                  port:
                    number: 3000
              path: /api
